ui-ux: Fix the Section Title on Small Screens

--- a/css/app.sass
+++ b/css/app.sass
@@ -55,6 +55,12 @@ img
 		transform: translateX(-50%)
 		left: 50%
 		text-transform: uppercase
+	
+	@media all and (max-width: 600px)
+		font-size: 2rem
+		.watermark
+			font-size: 2.5rem
+		
 
 .container
 	position: relative
